<!--
Software License Agreement (BSD License)

Copyright (c) 2013-2015, Timm Linder, Social Robotics Lab, University of Freiburg
All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:

* Redistributions of source code must retain the above copyright notice, this
  list of conditions and the following disclaimer.

* Redistributions in binary form must reproduce the above copyright notice,
  this list of conditions and the following disclaimer in the documentation
  and/or other materials provided with the distribution.

* Neither the name of the copyright holder nor the names of its contributors
  may be used to endorse or promote products derived from this software
  without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

###############################################################################

The icons used inside this package have been created by Yusuke Kamiyamane.
They are part of the Fugue Icons set and are licensed under the
Creative Commons Attribution 3.0 License.

See https://creativecommons.org/licenses/by/3.0/ for the license,
and http://p.yusukekamiyamane.com/ for details on the icons.

-->

<package>
  <name>track_annotation_tool</name>
  <version>1.0.8</version>

  <description>
     Standalone tool and supplementary RViz plugin for annotating person tracks
  </description>

  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>
  <author email="linder@cs.uni-freiburg.de">Timm Linder</author>

  <license>BSD; CC BY 3.0 (Fugue Icons by Yusuke Kamiyamane)</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>spencer_human_attribute_msgs</build_depend>
  <build_depend>libqt4</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt4-qmake</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>spencer_human_attribute_msgs</run_depend>
  <run_depend>libqt4</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>qt4-qmake</run_depend>

  <export>
      <rviz plugin="${prefix}/rviz_plugin.xml"/>
      <rqt_gui plugin="${prefix}/rqt_plugin.xml"/>
  </export>
<build_depend>roslib</build_depend><run_depend>roslib</run_depend></package>
