<package>
  <name>srl_tracking_exporter</name>
  <version>1.0.8</version>
  <description>
     Various exporters e.g. for SVG renderings
  </description>
  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>

  <license>BSD</license>
  
  <author>Timm Linder</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_generation</run_depend>
<build_depend>roslib</build_depend><run_depend>roslib</run_depend></package>
