<?xml version="1.0"?>
<package>

  <name>spencer_leg_detector_wrapper</name>
  <version>1.0.8</version>
  <description>
    Wrapper that integrates the leg_detector from wg-perception into the SPENCER people tracking framework.
    The leg_detector needs to be installed separately from https://github.com/wg-perception/people.
  </description>

  <maintainer email="linder@cs.uni-freiburg.de">Timm Linder</maintainer>
  <license>BSD</license>

  <author email="linder@cs.uni-freiburg.de">Timm Linder</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  
<build_depend>roslib</build_depend><run_depend>roslib</run_depend></package>
